--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -579,6 +579,26 @@ video {
   }
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.left-1\/2 {
+  left: 50%;
+}
+
+.top-1\/2 {
+  top: 50%;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -590,10 +610,6 @@ video {
 
 .mb-4 {
   margin-bottom: 1rem;
-}
-
-.block {
-  display: block;
 }
 
 .flex {
@@ -650,6 +666,20 @@ video {
   flex: none;
 }
 
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .resize {
   resize: both;
 }
@@ -692,6 +722,14 @@ video {
   border-radius: 0.25rem;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
 .border-b {
   border-bottom-width: 1px;
 }
@@ -704,6 +742,11 @@ video {
 .border-vest-red {
   --tw-border-opacity: 1;
   border-color: rgb(224 55 55 / var(--tw-border-opacity, 1));
+}
+
+.border-vest-green {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 194 163 / var(--tw-border-opacity, 1));
 }
 
 .bg-transparent {
@@ -723,6 +766,11 @@ video {
 .bg-vest-secondary-background {
   --tw-bg-opacity: 1;
   background-color: rgb(22 21 20 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vest-green {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 194 163 / var(--tw-bg-opacity, 1));
 }
 
 .p-4 {
@@ -758,8 +806,14 @@ video {
   padding-bottom: 1rem;
 }
 
-.pt-5 {
-  padding-top: 1.25rem;
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
 }
 
 .pt-10 {
