--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -658,6 +658,22 @@ video {
   width: 100%;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
+}
+
+.w-8\/12 {
+  width: 66.666667%;
+}
+
+.w-10\/12 {
+  width: 83.333333%;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -696,8 +712,44 @@ video {
   align-items: flex-start;
 }
 
+.items-end {
+  align-items: flex-end;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.justify-stretch {
+  justify-content: stretch;
+}
+
+.justify-items-start {
+  justify-items: start;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -734,19 +786,23 @@ video {
   border-bottom-width: 1px;
 }
 
+.border-none {
+  border-style: none;
+}
+
 .border-vest-border {
   --tw-border-opacity: 1;
   border-color: rgb(26 26 26 / var(--tw-border-opacity, 1));
 }
 
-.border-vest-red {
-  --tw-border-opacity: 1;
-  border-color: rgb(224 55 55 / var(--tw-border-opacity, 1));
-}
-
 .border-vest-green {
   --tw-border-opacity: 1;
   border-color: rgb(75 194 163 / var(--tw-border-opacity, 1));
+}
+
+.border-vest-red {
+  --tw-border-opacity: 1;
+  border-color: rgb(224 55 55 / var(--tw-border-opacity, 1));
 }
 
 .bg-transparent {
@@ -791,6 +847,16 @@ video {
   padding-right: 1rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -806,18 +872,16 @@ video {
   padding-bottom: 1rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.py-1\.5 {
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
-}
-
 .pt-10 {
   padding-top: 2.5rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .text-sm {
@@ -852,6 +916,21 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-vest-highlight-text {
+  --tw-text-opacity: 1;
+  color: rgb(242 241 240 / var(--tw-text-opacity, 1));
+}
+
+.text-vest-normal-text {
+  --tw-text-opacity: 1;
+  color: rgb(174 173 173 / var(--tw-text-opacity, 1));
+}
+
+.text-vest-background {
+  --tw-text-opacity: 1;
+  color: rgb(15 14 12 / var(--tw-text-opacity, 1));
 }
 
 .outline-none {
